--- a/app/views/payWechatOrder.html
+++ b/app/views/payWechatOrder.html
@@ -1,6 +1,6 @@
 <div class="payWechatFinalView">
     <img ng-src="{{designInfo.bkImg}}" class="designBackgroundImage">
-    <img src="{{'/image/' + designInfo.previewImageFile}}" style="{{designInfo.positionInfoStyleValue}}" 
+    <img src="{{hostName + '/image/' + designInfo.previewImageFile}}" style="{{designInfo.positionInfoStyleValue}}" 
     class="designPreviewImage">
     <div class="orderContent">
         <div class="orderContentPositionDiv">
