--- a/app/views/publicGallery.html
+++ b/app/views/publicGallery.html
@@ -30,21 +30,21 @@
                             ng-click="onArtifactSelected(oImageGroup[5])">
                         </-->
                         <div class="myArtifactsGroupTop">
-                            <img src="{{'/image/' + oImageGroup[0].previewFileName}}" style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
+                            <img src="{{hostName + '/image/' + oImageGroup[0].previewFileName}}" style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[0])">
-                            <img src="{{'/image/' + oImageGroup[1].previewFileName}}" style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
+                            <img src="{{hostName + '/image/' + oImageGroup[1].previewFileName}}" style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[1])">
                         </div>
                         <div class="myArtifactsGroupBottom">
-                            <img src="{{'/image/' + oImageGroup[2].previewFileName}}" style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
+                            <img src="{{hostName + '/image/' + oImageGroup[2].previewFileName}}" style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[2])">
-                            <img src="{{'/image/' + oImageGroup[3].previewFileName}}" style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
+                            <img src="{{hostName + '/image/' + oImageGroup[3].previewFileName}}" style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[3])">
                         </div>
                         <div class="myArtifactsGroupBottom">
-                            <img src="{{'/image/' + oImageGroup[4].previewFileName}}" style="{{!!oImageGroup[4] ? '' : 'visibility:hidden;'}}" 
+                            <img src="{{hostName + '/image/' + oImageGroup[4].previewFileName}}" style="{{!!oImageGroup[4] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[4])">
-                            <img src="{{'/image/' + oImageGroup[5].previewFileName}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
+                            <img src="{{hostName + '/image/' + oImageGroup[5].previewFileName}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
                             ng-click="onArtifactSelected(oImageGroup[5])">
                         </div>
                     </li>
