--- a/app/views/managePublicDesign.html
+++ b/app/views/managePublicDesign.html
@@ -13,7 +13,7 @@
     </div>
     <div ng-repeat="oDesign in aUnderReviewDesigns" class="designItem">
         <div class="designImageDiv">
-            <img src="{{'/image/' + oDesign.previewImageFile}}" class="previewImage">
+            <img src="{{hostName + '/image/' + oDesign.previewImageFile}}" class="previewImage">
         </div>
         <div class="designUpdateDiv">
             <span>{{"Access Type: " + oDesign.access}}</span>
