--- a/app/views/myDesigns.html
+++ b/app/views/myDesigns.html
@@ -43,7 +43,7 @@
                         <li ng-repeat="oDesign in aMyDesigns">
                             <div class="designItem" ng-click="onDesignItemClicked(oDesign)">
                                 <img src="{{oDesign.bkImg}}" class="designBackgroundImg">
-                                <img ng-src="{{'/image/' + oDesign.previewImageFile}}" style="{{positionInfoStyleValue}}">
+                                <img ng-src="{{hostName + '/image/' + oDesign.previewImageFile}}" style="{{positionInfoStyleValue}}">
                             </div>
                         </li>
                     </ul>
