--- a/app/views/createDetail.html
+++ b/app/views/createDetail.html
@@ -27,7 +27,8 @@
                 hm-pinch-in="onSelectedArtiItemPinchIn($event, oArtifact)" 
                 hm-pinch-out="onSelectedArtiItemPinchOut($event, oArtifact)" 
                 hm-touch="onTouched($event)" 
-                hm-tap="onTap($event)"
+                hm-tap="onTap($event)" 
+                hm-double-tap="onDoubleTap($event)"
                 style="{{oArtifact.styleStr}}">
                 <span class="selectedArtifactItemPencil glyphicon glyphicon-pencil" 
                 style="{{htmlItemStyle.previewBackgroundStyle ? oArtifact.pencilStyleStr : 'display:none;'}}"
