--- a/app/views/saveDetail.html
+++ b/app/views/saveDetail.html
@@ -36,8 +36,8 @@
         </div>
     </div>
     <div class="royalButtonWrapper saveDesignBtn" style="{{designInfo.bSaved === true ? 'display:none;' : ''}}">
-        <div class="btn btn-warning royalButton">
-            <span ng-click="onSaveDesignBtnClicked()">保存设计</span>
+        <div class="btn btn-warning royalButton" ng-click="onSaveDesignBtnClicked()">
+            <span>保存设计</span>
         </div>
     </div>
     <div class="naviBtnRow">
