--- a/app/views/personalGallery.html
+++ b/app/views/personalGallery.html
@@ -10,6 +10,11 @@
             <div class="uploadTip">
                 <span>请保证照片上传质量<br>（推荐2M左右）<br>点击素材放置到画布</span>
             </div>
+            <div class="royalButtonWrapper">
+                <div class="manageArtifactBtn btn btn-warning royalButton" ng-click="onManagePrivateArtifacts()">
+                    <span>{{isManagingArtifacts ? '管理完成' : '管理素材'}}</span>
+                </div>
+            </div>
         </div>
         <div class="uploadedImageArea">
             <div class="titleDiv">
@@ -21,20 +26,40 @@
                 rn-carousel-index="aMyArtifactCarouselIndex">
                     <li ng-repeat="oImageGroup in aMyArtifact">
                         <div class="myArtifactsGroupTop">
-                            <img src="{{hostName + '/image/' + oImageGroup[0].previewFileName}}" 
-                            style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[0])">
-                            <img src="{{hostName + '/image/' + oImageGroup[1].previewFileName}}" 
-                            style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[1])">
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[0].previewFileName}}" 
+                                style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[0])">
+                                <span class="removeArtifactBtn glyphicon glyphicon-remove" 
+                                style="{{(isManagingArtifacts && !!oImageGroup[0]) ? '' : 'display:none;'}}" 
+                                ng-click="onDeleteArtifact(oImageGroup[0])"></span>
+                            </div>
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[1].previewFileName}}" 
+                                style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[1])">
+                                <span class="removeArtifactBtn glyphicon glyphicon-remove" 
+                                style="{{(isManagingArtifacts && !!oImageGroup[1]) ? '' : 'display:none;'}}" 
+                                ng-click="onDeleteArtifact(oImageGroup[1])"></span>
+                            </div>
                         </div>
                         <div class="myArtifactsGroupBottom">
-                            <img src="{{hostName + '/image/' + oImageGroup[2].previewFileName}}" 
-                            style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[2])">
-                            <img src="{{hostName + '/image/' + oImageGroup[3].previewFileName}}" 
-                            style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[3])">
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[2].previewFileName}}" 
+                                style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[2])">
+                                <span class="removeArtifactBtn glyphicon glyphicon-remove" 
+                                style="{{(isManagingArtifacts && !!oImageGroup[2]) ? '' : 'display:none;'}}" 
+                                ng-click="onDeleteArtifact(oImageGroup[2])"></span>
+                            </div>
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[3].previewFileName}}" 
+                                style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[3])">
+                                <span class="removeArtifactBtn glyphicon glyphicon-remove" 
+                                style="{{(isManagingArtifacts && !!oImageGroup[3]) ? '' : 'display:none;'}}" 
+                                ng-click="onDeleteArtifact(oImageGroup[3])"></span>
+                            </div>
                         </div>
                         <!--img src="{{oImage.largeImage64}}" style="margin:auto;" 
                         ng-click="onArtifactSelected(oImage)"-->
