--- a/app/views/publicGallery.html
+++ b/app/views/publicGallery.html
@@ -30,22 +30,34 @@
                             ng-click="onArtifactSelected(oImageGroup[5])">
                         </-->
                         <div class="myArtifactsGroupTop">
-                            <img src="{{hostName + '/image/' + oImageGroup[0].previewFileName}}" style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[0])">
-                            <img src="{{hostName + '/image/' + oImageGroup[1].previewFileName}}" style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[1])">
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[0].previewFileName}}" style="{{!!oImageGroup[0] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[0])">
+                            </div>
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[1].previewFileName}}" style="{{!!oImageGroup[1] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[1])">
+                            </div>
                         </div>
                         <div class="myArtifactsGroupBottom">
-                            <img src="{{hostName + '/image/' + oImageGroup[2].previewFileName}}" style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[2])">
-                            <img src="{{hostName + '/image/' + oImageGroup[3].previewFileName}}" style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[3])">
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[2].previewFileName}}" style="{{!!oImageGroup[2] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[2])">
+                            </div>
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[3].previewFileName}}" style="{{!!oImageGroup[3] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[3])">
+                            </div>
                         </div>
                         <div class="myArtifactsGroupBottom">
-                            <img src="{{hostName + '/image/' + oImageGroup[4].previewFileName}}" style="{{!!oImageGroup[4] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[4])">
-                            <img src="{{hostName + '/image/' + oImageGroup[5].previewFileName}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
-                            ng-click="onArtifactSelected(oImageGroup[5])">
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[4].previewFileName}}" style="{{!!oImageGroup[4] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[4])">
+                            </div>
+                            <div class="artifactImgDiv">
+                                <img src="{{hostName + '/image/' + oImageGroup[5].previewFileName}}" style="{{!!oImageGroup[5] ? '' : 'visibility:hidden;'}}" 
+                                ng-click="onArtifactSelected(oImageGroup[5])">
+                            </div>
                         </div>
                     </li>
                 </ul>
